navbar collapse bug fixed

--- a/css/lofi-template.css
+++ b/css/lofi-template.css
@@ -2,7 +2,7 @@
 .bg-lofi{
     background-color: #090924 !important;
 }
-.bg-so-dark-blue{
+.bg-almost-white{
     background-color: #eeeeee !important; 
 }
 /* Banner text and icons */
